--- a/css/flex.html
+++ b/css/flex.html
@@ -1,26 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style >
-        div{
+    <style>
+        div {
             display: flex;
 
         }
 
+        .div1 {
+            width: 100px;
+            overflow: auto;
+        }
+
+        .div2 {}
+
+        .demo::-webkit-scrollbar {
+            display: none;
+            /* Chrome Safari */
+        }
+
+        .demo {
+            scrollbar-width: none;
+            /* firefox */
+            -ms-overflow-style: none;
+            /* IE 10+ */
+            overflow-x: auto;
+            overflow-y: hidden;
+        }
     </style>
 </head>
-<body>
-    div{
 
-    }
-    
+<body>
+    <div class="div1 demo">
+        <p class="div2">21312312312312312312312312312</p>
+    </div>
+
 </body>
 <script>
 
 
 
 </script>
+
 </html>·
